# odc-f1-mexican

./: README.md  pyproject.toml  results.json
data/: race_results_2018_to_2023.csv
f1_mexican/: constants.py  launch.py  main.py  train.py
f1_mexican/data/: lap_data_loader.py  result_data_loader.py
f1_mexican/inference/: lap_number_inference_pipeline.py  lap_time_inference_pipeline.py  stint_number_inference_pipeline.py  tire_compound_inference_pipeline.py
f1_mexican/modeling/: lap_number_modeling.py  lap_time_modeling.py  stint_number_modeling.py  tire_compound_modeling.py
f1_mexican/preprocessing/: feature_pipeline.py  preprocess_pipeline.py
f1_mexican/utils/: helpers.py
models/: final_lap_number_xgboost_model.pkl  final_lap_time_xgboost_model.pkl  final_stint_number_xgboost_model.pkl  final_tire_compound_xgboost_model.pkl
